--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="style2.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <script src="script.js"></script>
     <title>Lim Kopi: The Singapore Community for everyone to share.</title>
     <link rel="icon" 
