--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </section><br><br><br>
     <section>
       <div>
-        <h4>Table of Contents</h4>
+        <h4>Table of Contents</h4><br>
         <a onclick="smoothScroll(document.getElementById('parallax-one'))">1 Inspiration.</a><br>
         <a onclick="smoothScroll(document.getElementById('parallax-two'))">2 Idea.</a><br>
         <a onclick="smoothScroll(document.getElementById('parallax-three'))">3 We need you.</a><br>
