--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
           <p>I see you look at our social pages, and say, why would I support a page with nobody supporting? That's because we're new. If nobody supports, where will we get people to learn onboard this system? It's a simple system, but requires people. And that's where we need you.</p><br><br>
         <p><span class="first-character atw">W</span>e need help. No media has spread about such systems happening. People think it's complicated, when it's actually so simple, how Lim Kopi can connect people with each other.</p>
         <p class="line-break margin-top-10"></p>
-          <p class="margin-top-10">WE NEED YOU TO SHARE. Get this on board. Seniors, if you are looking at this now, <br><br><bold><a class="middlea" href="https://wa.me/6587389133">click here to our whatsapp</a><br> to join in on the fun and conversations online.</bold> We'll direct you simply to a WhatsApp group, but having activities and conversations that you can have for free. Get to know people! Cook together, exercise together, read together, explore together, no matter offline or online.</p>
+          <p class="margin-top-10">WE NEED YOU TO SHARE. Get this on board. Seniors, if you are looking at this now, <br><br><bold><a class="middlea" href="https://www.whatsapp.com/">click here to our whatsapp (currently invalid)</a><br> to join in on the fun and conversations online.</bold> We'll direct you simply to a WhatsApp group, but having activities and conversations that you can have for free. Get to know people! Cook together, exercise together, read together, explore together, no matter offline or online.</p>
           <p class="margin-top-10">Get back the strong community spirit we had in the past. Where's it gone? Facebook, Instagram, Twitter, come on. Find us at</p><ul><li><a class="middle" href="https://www.facebook.com/Lim-Kopi-Community-106732751090694">Facebook: Lim Kopi Page</a></li><li>
           <a class="middle" href="instagram.com/limkopisg">Instagram: @limkopisg</a></li></ul><p>Yes. Share. So more and more people know our existence and provision of activities, and the community of conversations going on.</p>
           <p class="margin-top-10"><bold>Honestly, not just seniors.</bold> Learning is for anyone. Though many seniors are alone, and of course it's so much better that they get the fun in life everyone should be getting, <bold> everyone should be learning. </bold>Even you. Join in the skills sessions, the valuable conversations that you can never have anywhere else. Same WhatsApp link. We'll direct you. Just come on board!</p>
-          <a class="middlea" href="https://wa.me/6587389133">click here to our whatsapp</a>
+          <a class="middlea" href="https://www.whatsapp.com/">click here to our whatsapp (currently invalid)</a>
           <p class="margin-top-10">WE NEED YOU TO SHARE. Get this on board. Finally, we're looking out for volunteers to vet people. Same WhatsApp link. Any queries, email works too. Either way, share, join, help. We're here as a Singapore community and this shouldn't stop at NDP.</p>
       </div>
     </section>
@@ -204,7 +204,7 @@
           <br>
           <a class="creditsfinal" href="limkopisingapore.github.io">limkopisingapore.github.io</a>
           <a class="creditsfinal" href="limkopisingapore@gmail.com">limkopisingapore@gmail.com</a>
-          <a class="creditsfinal" href="https://wa.me/6587389133">Admin WhatsApp: +8738 9133</a>
+          <a class="creditsfinal" href="https://www.whatsapp.com/">Admin WhatsApp: Currently Invalid</a>
           <a class="creditsfinal" href="https://www.facebook.com/Lim-Kopi-Community-106732751090694">Facebook: Lim Kopi Page</a>
           <a class="creditsfinal"href="https://instagram.com/limkopisg">Instagram: @limkopisg</a><br><br>
           <img src="Slide2.JPG" width="30%"><br><br><br><br>
